# kaati_ako

./: Cargo.toml  README.md  TODO  kaati_ako.sqlite
assets/: kaati_ako.desktop
src/: database.rs  main.rs  models.rs  ui.rs  util.rs
src/models/: card.rs  category.rs  language.rs  translation.rs
src/ui/: accelerators.rs  actions.rs  dialogs.rs  widgets.rs
src/ui/dialogs/: about.rs  addcard.rs  cardeditor.rs  deletecard.rs  error.rs
src/ui/widgets/: card.rs  cardnotebook.rs  content.rs
src/util/: database.rs
