[package]
name = "kaati_ako"
description = "Learn language vocabulary by flash cards - 'kaati ako' in Tongan."
repository = "https://github.com/kodeaffe/kaati_ako"
license-file = "LICENSE"
version = "0.1.0"
authors = ["kodeaffe <lahi+kodeaffe@posteo.de>"]
edition = "2018"


[dependencies]
gdk = "0.13.2"
gio = "0.9.1"
glib = "0.10.3"
gtk = "0.9.2"
sqlite = "0.24.0"
